# midy-rs

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
src/: main.rs  state.rs  stm32f1xx.rs  usb.rs  usb_midi.rs
