[package]
name = "midy-rs"
version = "0.1.0"
authors = ["Jeff Lynn <4128043+jefffm@users.noreply.github.com>"]
edition = "2018"

# this lets you use `cargo fix`!
[[bin]]
name = "midy-rs"
test = false
bench = false

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true # Link-time-optimizations for further size reduction
codegen-units = 1 
debug = true 

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "0.6.1"
