[package]
name = "midy-rs"
version = "0.1.0"
authors = ["Jeff Lynn <4128043+jefffm@users.noreply.github.com>"]
edition = "2018"

# this lets you use `cargo fix`!
[[bin]]
name = "midy-rs"
test = false
bench = false

[profile.dev]
opt-level = 'z'
lto = true
codegen-units = 1
debug = true

[profile.release]
opt-level = 1 # turn on maximum optimizations. We only have 64kB
lto = true # Link-time-optimizations for further size reduction
codegen-units = 1 
debug = true 

[dependencies]
cortex-m = { version = "0.6.3", features = ["const-fn"] }
cortex-m-rt = { version = "0.6.13", features = ["device"] }
cortex-m-rtic = "0.5.5"
cortex-m-rtic-macros = "0.5.2"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
usb-device = "0.2.5"
stm32f1xx-hal = { version = "0.6.1", features = ["rt", "stm32f103", "stm32-usbd"] }
stm32-usbd = { version = "0.5.1", features = ["ram_access_1x16"] }
usbd-midi = "0.2.0"
heapless = "0.5.6"

[dependencies.cortex-m-semihosting]
version = "0.3.5"

[dependencies.panic-semihosting]
version = "0.5.3"
